--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: yabackup
-version: '1.0-SNAPSHOT'
+version: '1.0.0'
 main: io.github.kilesduli.yabackup.Yabackup
 prefix: yabackup
 api-version: 1.13
